fix infopage h1 going out of box

--- a/src/pages/info/sass/info.sass
+++ b/src/pages/info/sass/info.sass
@@ -319,7 +319,7 @@
 
 
 .card-box section p
-    font-size: 0.8em
+    font-size: 0.75em
 
 #title-info
     padding-top: 1em
